[package]
name = "poc-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.0"
bevy_tweening = "0.9.0"
fractory-common = { package = "common", path = "../common" }
indexmap = "2.1.0"
serde = { version = "1.0.190", features = ["derive"] }
