[package]
name = "poc-fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergoquad-2d = "0.1.0"
rand = "0.8.5"
fractory-common = { package = "common", path = "../common" }
serde = { version = "1.0.190", features = ["derive"] }
